--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bienvenida Camada 8</title>
+    <title>Vamos la Camada 8!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
